# rust-ffmpeg

./: .gitmodules  Cargo.toml
src/codec/: id.rs
src/codec/packet/: packet.rs  side_data.rs
src/codec/subtitle/: mod.rs
src/filter/: filter.rs
src/util/: error.rs
src/util/color/: space.rs
src/util/format/: pixel.rs
src/util/frame/: side_data.rs
