[package]
name    = "ffmpeg"
version = "0.2.0-alpha.2"
# build   = "build.rs"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Safe FFmpeg wrapper"
repository  = "https://github.com/meh/rust-ffmpeg"
keywords    = ["audio", "video"]

[dependencies]
libc     = "0.2"
bitflags = "1.2"

[dependencies.image]
version  = "0.12"
optional = true

[dependencies.ffmpeg-sys]
path = "./rust-ffmpeg-sys"

[features]
default = ["ff_api_vaapi", "codec", "device", "filter", "format", "resampling", "software-scaling"]
ff_api_vaapi = []

codec               = []
device              = ["format"]
filter              = []
format              = ["codec"]
resampling          = []
postprocessing      = []
software-resampling = []
software-scaling    = ["codec"]
